# tswift

./: AGENTS.md  LICENSE  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  analyze_g395h.py  analyze_g395h_eclipse.py  analyze_soss.py  config.yaml
scripts/: regression_calibrate_lp890-9c_v12.py  test_end_to_end_wasp69b.py  test_extract_wasp69b.py  test_spec_fit_wasp69b.py  test_wl_fit_wasp69b.py
src/tswift/: __init__.py  bad_columns.py  bad_pixel.py  bootstrap.py  calibrate.py  cli.py  combine.py  contracts.py  eclipse.py  extract.py  helium.py  limb_asymmetry.py  mast.py  red_noise.py  spec_fit.py  spectrum.py  target_db.py  transit_model.py  wl_fit.py
tests/: test_calibrate_masks.py  test_t0_cache.py
