[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tswift"
version = "2.0.0.dev0"
description = "AI-agent-native JWST transit spectroscopy pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Guangwei Fu", email = "guangweifu@gmail.com" }]

dependencies = [
    "pydantic>=2.5",
    "astropy>=5.3",
    "astroquery>=0.4.9",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "jwst>=1.17",
    "batman-package>=2.5",
    "exotic-ld>=3.0",
    "emcee>=3.1",
    "corner>=2.2",
    # batman-package imports `distutils` and exotic_ld imports `pkg_resources` —
    # both legacy modules vendored by setuptools. setuptools 81 removed
    # pkg_resources, so cap below 81 (still provides distutils for batman on 3.12).
    "setuptools>=68,<81",
]

[project.scripts]
tswift = "tswift.cli:main"

[project.optional-dependencies]
limb = ["catwoman>=1.0"]   # optional morning/evening limb-asymmetry stage

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tswift = ["py.typed"]
